--- a/css/main.css
+++ b/css/main.css
@@ -249,15 +249,19 @@ button:focus {
   }
 }
 html[data-theme=light] {
-  --color-text: #F9FAFF;
-  --color-background: #000;
+  --color-text: #fff;
+  --color-background: rgb(66, 66, 66);
+  --text-color: #fff;
+  --bg-color: #282727;
+  --bg-dark: #191b1e;
 }
 
 html[data-theme=dark] {
-  --color-text: #000;
-  --color-background: #F9FAFF;
+  --color-text: rgb(66, 66, 66);
+  --color-background: #fff;
+  --text-color: #868688;
+  --bg-color: #F9FAFF;
   --bg-dark: #F9FAFF;
-  --icon-dark: #F9FAFF;
 }
 
 * {
@@ -314,13 +318,13 @@ body.open {
   left: 0;
   width: 5%;
   height: 100%;
-  background-color: var(--bg-dark);
+  background-color: var(--color-background);
   transition: width 0.4s;
-  margin-top: 30px;
+  padding-top: 30px;
 }
 .sidebar .sidebar-inner {
   position: absolute;
-  top: 0;
+  top: 30px;
   left: 0;
   height: inherit;
   display: flex;
@@ -377,7 +381,7 @@ body.open {
   height: 22px;
 }
 .sidebar li > span {
-  color: #868688;
+  color: var(--color-text);
   opacity: 0;
   font-size: 15px;
   transition: 0.3s;
@@ -407,7 +411,7 @@ body.open {
 }
 .sidebar .small-menu li a,
 .sidebar .show-menu li a {
-  color: #868688;
+  color: var(--color-text);
   font-size: 15px;
 }
 .sidebar .small-menu li a:hover,
@@ -436,7 +440,7 @@ body.open .main {
   transition: width 0.4s;
 }
 .main .navbar {
-  background-color: var(--icon-dark);
+  background-color: var(--color-background);
   margin: 10px 0 30px 0;
   display: flex;
   padding: 20px 10px;
@@ -446,7 +450,7 @@ body.open .main {
 .main .navbar .search {
   margin-left: 20px;
   position: relative;
-  background-color: #F9FAFF;
+  background-color: var(--bg-color);
   padding: 15px 0 15px 70px;
   border-radius: 50px;
   width: 385px;
@@ -516,7 +520,7 @@ body.open .main {
   border: 2px solid #4977E7;
 }
 .main .dash {
-  background-color: var(--icon-dark);
+  background-color: var(--color-background);
   padding: 20px 10px;
   border-radius: 10px;
 }
@@ -541,7 +545,7 @@ body.open .main {
 .open .dashboard-list .arrow {
   position: absolute;
   right: 0;
-  color: #868688;
+  background-color: var(--color-text);
   width: 22px;
   height: 22px;
   transition: 0.3s;
@@ -560,10 +564,5 @@ body.open .main {
 }
 
 body {
-  color: var(--color-text);
-  background: var(--color-background);
-}
-
-.sidebar {
   background-color: var(--bg-dark);
 }/*# sourceMappingURL=main.css.map */
