--- a/css/main.scss
+++ b/css/main.scss
@@ -3,21 +3,32 @@
 
 $onyx: $bg-color;
 $cultured: $black-color;
-$bg : $bg-color;
-$icon-color: $icon-color;
+// $bg : $white-color;
+// $icon-color: $icon-color;
+// $gray-color: $gray-color;
+$main-color: #4977E7;
+$bg-color: #F9FAFF;
+$white-color: #fff;
+$black-color: rgb(66, 66, 66);
+$icon-color: #dbddf4;
+$gray-color: #868688;
+$bg-dark: #191b1e;
 
 // define themes
 html[data-theme="light"] {
-  --color-text: #{$onyx};
-  --color-background: #{$cultured};
-  $icon-color: $white-color;
+  --color-text: #{$white-color};
+  --color-background: #{$black-color};
+  --text-color: #{$white-color};
+  --bg-color : #282727;
+  --bg-dark : #{$bg-dark};
 }
 
 html[data-theme="dark"] {
-  --color-text: #{$cultured};
-  --color-background: #{$onyx};
-  --bg-dark : #{$bg};
-  --icon-dark : #{$bg-color};
+  --color-text: #{$black-color};
+  --color-background: #{$white-color};
+  --text-color: #{$gray-color};
+  --bg-color : #{$bg-color};
+  --bg-dark: #{$bg-color};
 }
 
 
@@ -75,12 +86,12 @@ body.open {
     width: 5%;
     height: 100%;
     // background: $bg-color;
-   background-color: var(--bg-dark) ;
+    background-color: var(--color-background);
     transition: width 0.4s;
-    margin-top: 30px;
+    padding-top: 30px;
     .sidebar-inner {
         position: absolute;
-        top: 0;
+        top: 30px;
         left: 0;
         // width: 300px;
         height: inherit;
@@ -158,7 +169,8 @@ body.open {
     }
 
     li > span {
-        color: $gray-color;
+        // color: $gray-color;
+        color: var(--color-text);
         opacity: 0;
         font-size: 15px;
         transition: 0.3s;
@@ -186,7 +198,8 @@ body.open {
         li {
             padding: 10px 0;
             a {
-                color: $gray-color;
+                // color: $gray-color;
+                color: var(--color-text);
                 font-size: 15px;
                 &:hover {
                     color: $main-color;
@@ -216,7 +229,7 @@ body.open .main {
     transition: width 0.4s;
     .navbar {
         // background-color: $white-color;
-        background-color: var(--icon-dark) ;
+        background-color: var(--color-background);
         margin: 10px 0 30px 0;
         display: flex;
         padding: 20px 10px;
@@ -225,7 +238,8 @@ body.open .main {
         .search {
             margin-left: 20px;
             position: relative;
-            background-color: $bg-color;
+            // background-color: $bg-color;
+            background-color: var(--bg-color);
             padding: 15px 0 15px 70px;
             border-radius: 50px;
             width: 385px;
@@ -297,7 +311,7 @@ body.open .main {
     }
     .dash {
         // background-color: $white-color;
-        background-color: var(--icon-dark) ;
+        background-color: var(--color-background) ;
 
         padding: 20px 10px;
         border-radius: 10px;
@@ -329,7 +343,8 @@ body.open .main {
     .arrow {
         position: absolute;
         right: 0;
-        color: $gray-color;
+        // color: $gray-color;
+        background-color: var(--color-text);
         width: 22px;
         height: 22px;
         transition: 0.3s;
@@ -354,12 +369,14 @@ body.open .main {
 // define colors
 
 // use colors
+// body {
+//   // here the css variables are used
+//   color: var(--color-text);
+//   background: var(--color-background);
+// }
+// .sidebar {
+//     background-color: var(--bg-dark)
+// }
 body {
-  
-  // here the css variables are used
-  color: var(--color-text);
-  background: var(--color-background);
-}
-.sidebar {
-    background-color: var(--bg-dark)
+    background-color: var(--bg-dark);
 }
