--- a/css/main.scss
+++ b/css/main.scss
@@ -1,19 +1,5 @@
 @use "sass/index" as *;
 
-
-$onyx: $bg-color;
-$cultured: $black-color;
-// $bg : $white-color;
-// $icon-color: $icon-color;
-// $gray-color: $gray-color;
-$main-color: #4977E7;
-$bg-color: #F9FAFF;
-$white-color: #fff;
-$black-color: rgb(66, 66, 66);
-$icon-color: #dbddf4;
-$gray-color: #868688;
-$bg-dark: #191b1e;
-
 // define themes
 html[data-theme="light"] {
   --color-text: #{$white-color};
@@ -46,6 +32,12 @@ body.open .sidebar .sidebar-header {
     height: 72px;
     padding: 0 1.25rem 0 0;
     position: relative;
+    @include breakpoints(sm) {
+        display: none;
+     }
+    @include breakpoints(xs) {
+        display: none;
+     }
 }
 body.open .sidebar-logo {
     opacity: 1;
@@ -61,6 +53,12 @@ body.open .sidebar li > span {
     opacity: 1;
     animation: appear 0.3s both;
     display: inline-block;
+    @include breakpoints(sm) {
+        display: none;
+    }
+    @include breakpoints(xs) {
+        display: none;
+    }
 }
 
 
@@ -108,6 +106,12 @@ body.open {
         // background: #fff;
         // position: relative;
             height: 72px;
+            @include breakpoints(sm) {
+                display: none;
+             }
+            @include breakpoints(xs) {
+               display: none;
+            }
     }
 
     .sidebar-burger {
@@ -206,24 +210,61 @@ body.open {
                 }
             }
         }
+        @include breakpoints(sm) {
+            display: none !important;
+        }
+        @include breakpoints(xs) {
+            display: none !important;
+        }
+    }
+    @include breakpoints(md) {
+        width: 60px;
+    }
+    @include breakpoints(sm) {
+        width: 60px;
+    }
+    @include breakpoints(xs) {
+        width: 60px;
     }
 }
 .show {
     display: flex !important;
     transition: 0.4s all;
+    @include breakpoints(sm) {
+        display: none;
+    }
+    @include breakpoints(xs) {
+        display: none;
+    }
 }
 
 body.open .sidebar {
     width: 20%;
     position: fixed;
+    @include breakpoints(md) {
+        width: 28%;
+    }
+    @include breakpoints(sm) {
+        width: 60px;
+    }
+    @include breakpoints(xs) {
+        width: 60px;
+    }
 }
 body.open .main {
     width: 78%;
+    @include breakpoints(md) {
+        width: 68%;
+    }
+    @include breakpoints(sm) {
+        width: 85%;
+    }
 }
 
 .main {
     width: 92%;
     margin-top: 20px;
+    margin-bottom: 30px;
     margin-right: 10px;
     // background-color: $white-color;
     transition: width 0.4s;
@@ -260,6 +301,16 @@ body.open .main {
             }
             &:hover {
                 border: 1px solid $main-color;
+            }
+            @include breakpoints(md) {
+                margin-left: 0;
+                padding: 10px 0 10px 55px;
+                width: 285px;
+            }
+            @include breakpoints(sm) {
+                margin-left: 0;
+                padding: 10px 0 10px 55px;
+                width: 285px;
             }
         }
         .user {
@@ -334,6 +385,12 @@ body.open .main {
     .box-4 {
         background: #86D1B3;
     }
+    @include breakpoints(md) {
+        width: 88%;
+    }
+    @include breakpoints(sm) {
+        width: 83%;
+    }
 }
 
 
@@ -350,6 +407,7 @@ body.open .main {
         transition: 0.3s;
         background: url("../img/arrow-down.svg") no-repeat center center;
     }
+    
 }
 .arrow-icon .arrow {
     background: url("../img/arrow-up.svg") no-repeat center center !important;
@@ -362,21 +420,12 @@ body.open .main {
     height: 22px;
     transition: 0.3s;
     background: url("../img/arrow-down.svg") no-repeat center center;
+    @include breakpoints(sm) {
+        display: none;
+    }
+    @include breakpoints(xs) {
+        display: none;
+    }
 }
 }
 
-
-// define colors
-
-// use colors
-// body {
-//   // here the css variables are used
-//   color: var(--color-text);
-//   background: var(--color-background);
-// }
-// .sidebar {
-//     background-color: var(--bg-dark)
-// }
-body {
-    background-color: var(--bg-dark);
-}
