--- a/css/main.scss
+++ b/css/main.scss
@@ -431,8 +431,8 @@ body.open .main {
 
 .btn-theme {
     position: fixed;
-    bottom: 50px;
-    left: 50px;
+    bottom: 30px;
+    left: 25px;
     cursor: pointer;
 }
 input#switch {
@@ -443,6 +443,7 @@ input#switch {
     right: -11px;
     z-index: 99;
     opacity: 0;
+    cursor: pointer;
 }
   .label {
     width: 50px;
@@ -455,6 +456,7 @@ input#switch {
     padding: 5px;
     position: relative;
     transform: scale(1.5);
+    cursor: pointer;
   }
   
   .ball {
